unpackaged/main/default/objects/ACG_Membership_Config__mdt/ACG_Membership_Config__mdt.object-meta.xml
<CustomObject>
    <description>Membership configurations for business units</description>
    <label>ACG Membership Config</label>
    <pluralLabel>ACG Membership Options Configs</pluralLabel>
</CustomObject>