unpackaged/main/default/objects/ACG_Membership_Config__mdt/fields/ACG_Motorcycle_Included__c.field-meta.xml
<CustomField>
    <fullName>ACG_Motorcycle_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Motorcycle Included?</label>
    <type>Checkbox</type>
</CustomField>