unpackaged/main/default/objects/ACG_Membership_Config__mdt/fields/ACG_RV_Included__c.field-meta.xml
<CustomField>
    <fullName>ACG_RV_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RV Included?</label>
    <type>Checkbox</type>
</CustomField>